# ostruct

./: .dockerignore  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  MIGRATION_GUIDE.md  Makefile  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v0.8.0.md  SECURITY.md  bug_analysis_report.md  debug_registry_test.py  llms.txt  mypy.ini  ostruct.yaml  ostruct.yaml.example  pyinstaller.spec  pyproject.toml  test.json  test_encoding.py  test_schema.json  test_template.j2  test_tiktoken.py
.github/: dependabot.yml
.github/workflows/: ci.yml  cross-platform-test.yml  docs.yml  publish.yml  release.yml
Formula/: ostruct-cli.rb
docs/: DEPENDENCY_UTILITIES.md  Makefile  developer-ci-downloads.md  template_debugging.md  template_troubleshooting.md  troubleshooting-ci-downloads.md  troubleshooting.md
docs/.rtd/: TEMP_FIX.md
docs/_build/html/: .buildinfo  cli.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  template_filters.html  templates.html
docs/known-issues/: 2025-01-openai-json-duplication.md  2025-06-responses-ci-file-output.md  2025-07-openai-file-search-empty-results.md  README.md
docs/migration/: auto-download.md
docs/source/: cli.md  conf.py  index.rst  migration.md  template_filters.md  templates.md
docs/source/automate/: ci_cd.rst  ci_cd_and_containers.rst  containers.rst  cost_control.rst  scripting_and_cost.rst  scripting_patterns.rst
docs/source/contribute/: environment-consistency.rst  examples_standard.rst  how_to_contribute.rst  release_workflow.rst  setting_up.rst  style_guide.rst
docs/source/security/: overview.rst
docs/source/user-guide/: advanced_patterns.rst  cli_reference.rst  data_science_integration.rst  examples.rst  file_sequence_protocol.rst  gitignore_guide.rst  introduction.rst  ost_frontmatter_reference.rst  ostruct_template_scripting_guide.rst  prompt_scripting_guide.rst  quickstart.rst  template_authoring.rst  template_guide.rst  template_quick_reference.rst  template_structure.rst  tool_integration.rst  upload_cache_guide.rst
docs/user/: template_structure.md
examples/: README.md
examples/agent/: .gitignore  IMPLEMENTATION_STATUS.md  Makefile  README.md  TOOLS.md  benchmark_critic.sh  ensure_dependencies.sh  runner.sh  test_agent.sh  test_critic.sh  tools.json  verify.sh
examples/agent/benchmark_results/: cost_analysis_20250709_185731.json  critic_calls_20250709_185731.json  execution_time_20250709_185731.json  perf_test_input.json  performance_report_20250709_185731.md
examples/agent/examples/: simple_file_creation.md  text_processing_example.md  web_download_example.md
examples/agent/lib/: ai_helpers.sh  config.sh  dag_sort.py  json_utils.sh  ostruct_cli.sh  path_utils.sh  retry.sh  simple_logging.sh  tools.sh  (+2 more)
examples/arg_to_aif/: Makefile  README.md  prompt.j2  schema.json
examples/code-quality/: README.md
examples/config-validation/: README.md  run.sh
examples/data-analysis/: README.md
examples/data-science/: Makefile  README.md
examples/debugging/: README.md
examples/document-analysis/: README.md
examples/enhanced/: README.md
examples/etymology/: README.md
examples/file-references/: README.md  code-review.j2  data-analysis.j2  manual-code-review.j2  security-audit-schema.json  security-audit.j2
examples/infrastructure/: README.md
examples/meta-schema-generator/: README.md
examples/multi-markdown-convertor/: .gitignore  README.md  TROUBLESHOOTING.md  convert.sh  test_input.txt
examples/multi_agent_debate/: .gitignore  README.md  run_debate.sh
examples/optimization/: README.md
examples/security/: README.md
examples/testing/: README.md
examples/tses/: README.md  api-documentation.j2  code-review.j2  config-analysis.j2  data-analysis.j2  schema.json  troubleshooting.j2
examples/tses2/: code-review.j2
examples/web-search/: README.md  basic_research.j2  current_events.j2  current_events_schema.json  enhanced_sources_schema.json  flexible_analysis.j2
lib/: simple_logging.sh
scripts/: README.md  logging.sh  test-like-ci.sh  validate-release.py  verify-environment.sh
scripts/docker/: test-alpine.dockerfile  test-docker-environments.sh  test-ubuntu.dockerfile
scripts/examples/: standard_runner.sh  standard_runner.sh.backup
scripts/migration/: README.md  batch_migrate.py  migrate_cli_syntax.py  migrate_config.py
scripts/release/: create-rc.sh
scripts/test/: README.md  validate-examples.sh
src/assets/: ostruct logo.ai
src/ostruct/: __init__.py
tests/: README.md  __init__.py  conftest.py  test_allowed_checker.py  test_annotation_integration.py  test_api_compatibility.py  test_attachment_integration.py  test_attachment_processor.py  test_attachment_template_bridge.py  test_attachment_utils.py  test_binary_lazy.py  test_cache_manager.py  test_case_manager.py  test_cli.py  test_cli_errors.py  test_cli_gitignore_integration.py  test_cli_validation.py  test_client_utils.py  test_code_interpreter.py  test_config.py  test_config_ttl.py  test_cross_platform.py  test_cross_platform_simple.py  test_dotenv_integration.py  test_download_strategy.py  test_dynamic_model_choice.py  test_error_utils.py  test_examples.py  test_explicit_routing.py  test_file_for_cli_parsing.py  test_file_list.py  test_file_routing_intent.py  test_file_sequence_protocol.py  test_file_utils.py  test_gitignore_cli_integration.py  test_gitignore_integration.py  test_gitignore_support.py  test_import_structure.py  test_inode_basic.py  test_inode_tracking.py  (+56 more)
tests/cli/: test_file_error_handling.py  test_files_commands.py  test_files_upload.py  test_runx.py  test_smart_path_truncation.py
tests/lib/: test_path_utils.bats  test_retry.bats
tests/performance/: test_baseline.py
tests/support/: models.py
tests/tools/: test_ost_generator.py
tests/unit/: test_build_message_content.py  test_schema_limits.py
tools/: README.md
tools/ost-generator/: README.md  run.sh
tools/schema-generator/: README.md  run.sh
tools/template-analyzer/: README.md  analysis_report.html  run.sh  test_analysis.json
(+784 files in other folders)
